path-based routing changes and removed gitea from html file

--- a/html/index.html
+++ b/html/index.html
@@ -49,9 +49,8 @@
 <body>
 <h1>Development Links</h1>
 <ul>
-    <li><a href="/git/">Gitea</a> - a standalone git repository where you can develop your code, data, or extensions.
-        This also can act as an external database to Komet. Default administrative login is
-        (username: "admin", password: "admin"), but by default, you can register a different user from the UI.</li>
+    <li><a href="/static-site/">ikmdev-site</a> -a static website that is built from the ikmdev-site repository.
+        It is used to dump html files and serve static content.</li>
     <li><a href="/nexus/">Nexus</a> - a maven repository, where you can publish your komet data files for sharing.
         Default login is (username: "admin", password: "admin").</li>
     <li><a href="/komet/">Komet Web</a> - the web version of komet, which allows you to access and modify data.
