readme and index.html updated

--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
 <body>
 <h1>Development Links</h1>
 <ul>
-    <li><a href="/static-site/">ikmdev-site</a> -a static website that is built from the ikmdev-site repository.
+    <li><a href="/ikmdev-site/">ikmdev-site</a> -a static website that is built from the ikmdev-site repository.
         It is used to dump html files and serve static content.</li>
     <li><a href="/nexus/">Nexus</a> - a maven repository, where you can publish your komet data files for sharing.
         Default login is (username: "admin", password: "admin").</li>
